tests/snapshots/snapshots/tests__snapshots__render_snapshots__snapshot_messages_narrow_terminal.snap
---
source: tests/snapshots/render_snapshots.rs
expression: output
---

    ▄▄▄▄▄▄
   █▀██▀▀▀█▄  █▄
     ██▄▄▄█▀  ██  v0.1.0
     ██▀▀█▄   ████▄ ▄███▄
   ▄ ██  ██   ██ ██ ██ ██
   ▀██▀  ▀██▀▄██ ██▄▀███▀

   • wkr: .
   • id:  ---
   • Type /help for commands
   Time to build something awesome


 * A long message that should wrap in
   a narrow terminal window

  Short reply.
