tests/snapshots/snapshots/tests__snapshots__render_snapshots__snapshot_messages_terminal.snap
---
source: tests/snapshots/render_snapshots.rs
expression: output
---

      ▄▄▄▄▄▄                 │  • wkr: .
     █▀██▀▀▀█▄  █▄           │  • id:  ---
       ██▄▄▄█▀  ██  v0.1.0   │  • Type /help for commands
       ██▀▀█▄   ████▄ ▄███▄  │
     ▄ ██  ██   ██ ██ ██ ██  │
     ▀██▀  ▀██▀▄██ ██▄▀███▀  │  Time to build something awesome


 ┌─ $ cargo build
 │    Compiling rho v0.1.0
 │     Finished in 2.5s
 └─
