tests/snapshots/snapshots/tests__snapshots__render_snapshots__snapshot_messages_user_and_assistant.snap
---
source: tests/snapshots/render_snapshots.rs
expression: output
---

      ▄▄▄▄▄▄                 │  • wkr: .
     █▀██▀▀▀█▄  █▄           │  • id:  ---
       ██▄▄▄█▀  ██  v0.1.0   │  • Type /help for commands
       ██▀▀█▄   ████▄ ▄███▄  │
     ▄ ██  ██   ██ ██ ██ ██  │  Time to build something awesome
     ▀██▀  ▀██▀▄██ ██▄▀███▀  │


 * How do I sort a list in Python?

  Use sorted(my_list) for a new sorted list, or my_list.sort() to sort in place.
