tests/snapshots/snapshots/tests__snapshots__render_snapshots__snapshot_notification_error.snap
---
source: tests/snapshots/render_snapshots.rs
expression: output
---




        ╭ Error ───────────────────────────────────╮
        │                                          │
        │  Connection lost                         │
        │                                          │
        │                                          │
        │  Press any key to dismiss                │
        ╰──────────────────────────────────────────╯
